// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/DateLabel Date Label Date 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      NaN years
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
        title="Invalid Date"
      >
        <svg
          focusable="false"
          height="1rem"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 19H5V8h14m-3-7v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1m-1 11h-5v5h5v-5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label/DateLabel Date Label Number 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      NaN years
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
        title="Invalid Date"
      >
        <svg
          focusable="false"
          height="1rem"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 19H5V8h14m-3-7v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1m-1 11h-5v5h5v-5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label/DateLabel Date Label String 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      2 months
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root"
        title="12/17/2020, 12:00:00 AM"
      >
        <svg
          focusable="false"
          height="1rem"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 19H5V8h14m-3-7v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1m-1 11h-5v5h5v-5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
